--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,15 +11,6 @@ on:
         type: choice
         options:
           - dev
-          - gcssre-prd-common-aks
-      AZURE_CREDENTIAL: # dev Subscription
-        type: choice
-        options:
-          - dev
-      # AZURE_CREDENTIAL_PRD: # prd Subscription
-      #   type: choice
-      #   options:
-      #     - GCS_SRE_SHR_AZURE_CREDENTIAL
       JIRAUSER:
         type: string
       # APITOKEN:
@@ -39,7 +30,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          creds: ${{ secrets[inputs.AZURE_CREDENTIAL] }}
+          creds: ${{ secrets.AZURE_CREDENTIAL }}
 
       - name: Preparation
         run: |
