--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,11 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIAL }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Debug Azure Login
+        run: |
+          az account show
 
       - name: Preparation
         run: |
