--- a/.github/workflows/testAll.yml
+++ b/.github/workflows/testAll.yml
@@ -54,6 +54,8 @@ jobs:
 
   update-github-secret:
     runs-on: ubuntu-latest
+    environment:
+      name: dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
