--- a/.github/workflows/testAll.yml
+++ b/.github/workflows/testAll.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Authenticate with GitHub CLI
         run: |
-          echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
+          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
 
       - name: Update GitHub Secret
         run: |
@@ -91,7 +91,7 @@ jobs:
 
   #     - name: Authenticate with GitHub CLI
   #       run: |
-  #         echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
+  #         echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
 
   #     - name: Delete GitHub Secret
   #       run: |
