--- a/.github/workflows/testAll.yml
+++ b/.github/workflows/testAll.yml
@@ -78,60 +78,60 @@ jobs:
             gh secret set TEST_JIRA_TOKEN --repo $repo --body="$BASE64_AUTH_STRING"
           done
 
-  # delete-github-secret:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
+  delete-github-secret:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  #     - name: Install GitHub CLI
-  #       run: |
-  #         sudo apt-get update
-  #         sudo apt-get install -y gh
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gh
 
-  #     - name: Authenticate with GitHub CLI
-  #       run: |
-  #         echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
+      - name: Authenticate with GitHub CLI
+        run: |
+          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
 
-  #     - name: Delete GitHub Secret
-  #       run: |
-  #         for repo in 'SonySemiconductorSolutions/ss-core-ops' 'SonySemiconductorSolutions/ss-global-ops' 'SonySemiconductorSolutions/ss-gcs-microservice-template'; do
-  #           echo "Deleting secrets for $repo"
-  #           gh secret delete TEST_JIRA_TOKEN --repo $repo
-  #         done
+      - name: Delete GitHub Secret
+        run: |
+          for repo in 'SonySemiconductorSolutions/ss-core-ops' 'SonySemiconductorSolutions/ss-global-ops' 'SonySemiconductorSolutions/ss-gcs-microservice-template'; do
+            echo "Deleting secrets for $repo"
+            gh secret delete TEST_JIRA_TOKEN --repo $repo
+          done
 
-  # delete-jiraSM-ApiToken-gcssre-dev:
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: dev
-  #   steps:
-  #     - name: Login to Azure
-  #       uses: azure/login@v2
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+  delete-jiraSM-ApiToken-gcssre-dev:
+    runs-on: ubuntu-latest
+    environment:
+      name: dev
+    steps:
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     - name: delete jiraSM ApiToken
-  #       run: |
-  #         az keyvault secret delete \
-  #           --name test-jiraSM \
-  #           --vault-name kv-work-githubAction
+      - name: delete jiraSM ApiToken
+        run: |
+          az keyvault secret delete \
+            --name test-jiraSM \
+            --vault-name kv-work-githubAction
           
-  #         az keyvault secret delete \
-  #           --name test-jiraSM \
-  #           --vault-name kv-gcssre-dev-jsmapitoke
+          az keyvault secret delete \
+            --name test-jiraSM \
+            --vault-name kv-gcssre-dev-jsmapitoke
 
-  # delete-jiraSM-ApiToken-gcssre-prd:
-  #   runs-on: ubuntu-latest
-  #   environment:
-  #     name: prd
-  #   steps:
-  #     - name: Login to Azure
-  #       uses: azure/login@v2
-  #       with:
-  #         creds: ${{ secrets.AZURE_CREDENTIALS }}
+  delete-jiraSM-ApiToken-gcssre-prd:
+    runs-on: ubuntu-latest
+    environment:
+      name: prd
+    steps:
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     - name: delete jiraSM ApiToken
-  #       run: |
-  #         az keyvault secret delete \
-  #           --name test-jiraSM \
-  #           --vault-name kv-gcssre-prd-jsmapitoke
+      - name: delete jiraSM ApiToken
+        run: |
+          az keyvault secret delete \
+            --name test-jiraSM \
+            --vault-name kv-gcssre-prd-jsmapitoke
