--- a/.github/workflows/testAll.yml
+++ b/.github/workflows/testAll.yml
@@ -80,6 +80,8 @@ jobs:
 
   delete-github-secret:
     runs-on: ubuntu-latest
+    environment:
+      name: dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
