--- a/.github/workflows/testAll.yml
+++ b/.github/workflows/testAll.yml
@@ -105,6 +105,7 @@ jobs:
 
   delete-jiraSM-ApiToken-gcssre-dev:
     runs-on: ubuntu-latest
+    needs: update-jiraSM-ApiToken-gcssre-dev
     environment:
       name: dev
     steps:
@@ -125,6 +126,7 @@ jobs:
 
   delete-jiraSM-ApiToken-gcssre-prd:
     runs-on: ubuntu-latest
+    needs: update-jiraSM-ApiToken-gcssre-prd
     environment:
       name: prd
     steps:
