--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          auth-type: SERVICE-PRINCIPAL
+          auth-type: SERVICE_PRINCIPAL
 
       - name: show jiraSM ApiToken
         run: |
@@ -40,7 +40,7 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          auth-type: SERVICE-PRINCIPAL
+          auth-type: SERVICE_PRINCIPAL
 
       - name: update jiraSM ApiToken
         run: |
