--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.GCS_SRE_UPDATE_KV_AZURE_CREDENTIAL }}
           auth-type: SERVICE_PRINCIPAL
 
       - name: show jiraSM ApiToken
